implement auth handler, update entities, api docs
