# docs/swagger.json
@@ -7,6 +7,209 @@
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/v1",
-    "paths": {}
+    "basePath": "/api/v1",
+    "paths": {
+        "/pastes": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pastes"
+                ],
+                "summary": "Создание нововой пасты",
+                "parameters": [
+                    {
+                        "description": "Паста",
+                        "name": "paste",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Paste"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/pastes/{hash}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pastes"
+                ],
+                "summary": "Получениие пасту по хешу",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Хеш пасты",
+                        "name": "hash",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "error": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pastes"
+                ],
+                "summary": "Удаление пасты по хешу",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Хеш пасты",
+                        "name": "hash",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/token": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Получения авторизационных данных",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Уникальный код, сгенерированный OAuth2 приложением",
+                        "name": "code",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Paste": {
+            "description": "Тело запроса для создания пасты.",
+            "type": "object",
+            "properties": {
+                "expires": {
+                    "description": "Время, через которое паста становится не доступной",
+                    "type": "string",
+                    "example": "30m"
+                },
+                "format": {
+                    "description": "Формат текста",
+                    "type": "string",
+                    "enum": [
+                        "json",
+                        "yaml",
+                        "toml"
+                    ],
+                    "example": "json"
+                },
+                "name": {
+                    "description": "Название",
+                    "type": "string",
+                    "example": "thie is paste"
+                },
+                "password": {
+                    "description": "Пароль для получения доступа к пасте",
+                    "type": "string",
+                    "example": "hello"
+                },
+                "text": {
+                    "description": "Текст пасты",
+                    "type": "string",
+                    "example": "this is my paste"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
