# internal/entity/paste.go
@@ -8,13 +8,19 @@ import (
 var ErrPasteNotFound = errors.New("paste not found")
 
 type Paste struct {
-	Hash         string
-	UserID       string
-	Name         string
-	Format       string
-	URL          string
-	PasswordHash []byte
-	CreatedAt    time.Time
-	ExpiresAt    time.Time
-	Block        []byte
+	Hash      string     `db:"hash"`
+	UserID    string     `db:"user_id"`
+	Name      string     `db:"name"`
+	Format    string     `db:"format"`
+	URL       string     `db:"url"`
+	CreatedAt *time.Time `db:"created_at"`
+	ExpiresAt *time.Time `db:"expires_at"`
+	Password  []byte     `db:"password"`
+	File      File       `db:"file"`
+}
+
+type File []byte
+
+func (f File) Size() int64 {
+	return int64(len(f))
 }
